--- a/index.html
+++ b/index.html
@@ -33,17 +33,25 @@
 		<div class="image" data-role="image"></div>
 	</div
 	><div class="right" data-role="right">
+		<div data-role="geoContainer" class="info">
+			<div class="icon"
+				data-role="geoIcon"
+				data-icon="M16,3.5c-4.142,0-7.5,3.358-7.5,7.5c0,4.143,7.5,18.121,7.5,18.121S23.5,15.143,23.5,11C23.5,6.858,20.143,3.5,16,3.5z M16,14.584c-1.979,0-3.584-1.604-3.584-3.584S14.021,7.416,16,7.416S19.584,9.021,19.584,11S17.979,14.584,16,14.584z"
+				data-transform="t -8.6,-8 s 0.6,0.6"
+				></div>
+			<div class="info-data geo" data-role="geo"></div>
+		</div>
 		<div data-role="likesContainer" class="info">
 			<div class="icon"
 				data-role="likeIcon"
 				data-icon="M24.132,7.971c-2.203-2.205-5.916-2.098-8.25,0.235L15.5,8.588l-0.382-0.382c-2.334-2.333-6.047-2.44-8.25-0.235c-2.204,2.203-2.098,5.916,0.235,8.249l8.396,8.396l8.396-8.396C26.229,13.887,26.336,10.174,24.132,7.971z"
-				data-transform="t -8,-8 s 0.7,0.7"><span data-role="likeCount"></span></div>
+				data-transform="t -8,-7 s 0.7,0.7"><span data-role="likeCount"></span></div>
 			<div class="info-data likes" data-role="likes"></div>
 		</div>
 		<div data-role="rowsContainer" class="info">
 			<div class="icon"
 				data-icon="M16,5.333c-7.732,0-14,4.701-14,10.5c0,1.982,0.741,3.833,2.016,5.414L2,25.667l5.613-1.441c2.339,1.317,5.237,2.107,8.387,2.107c7.732,0,14-4.701,14-10.5C30,10.034,23.732,5.333,16,5.333z"
-				data-transform="t -9,-9 s -0.5,0.5"><span data-role="commentCount"></span></div>
+				data-transform="t -9,-8 s -0.5,0.5"><span data-role="commentCount"></span></div>
 			<div class="info-data rows" data-role="rows"></div>
 		</div>
 	</div>
