--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8><title>dtinthstagram</title>
 <link rel=stylesheet href=css.css>
+<script src="emoji/emoji.js"></script>
+<script src="emoji/emoji.data.js"></script>
 <body>
 
 <div id="main-wrapper">
