--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			data-width="24" data-height="24"
 			class="refresh-button"></span>
 	</h2>
+	<div data-role="userInfo"></div>
 	<div data-role="contents"></div>
 	<div data-role="footer">
 		<div data-role="loading" class="loading">loading...</div>
@@ -80,6 +81,9 @@
 	<span class="when" data-role="date">when</span>
 </div>
 <div class="template collection" id="collection">
+</div>
+<div class="template user-info" id="user-info">
+	<div data-role="picture"></div>
 </div>
 <script src="lib/raphael.js"></script>
 <script src="lib/jquery-1.7.2.js"></script>
