add few meta tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html><meta charset=utf-8><title>dtinthstagram</title>
 <link rel=stylesheet href=css.css>
+<meta name="og:title" content="dtinthstagram" />
+<meta name="og:url" content="http://dtinth.github.com/dtinthstagram/" />
+<meta name="og:type" content="website" />
+<meta name="og:site_name" content="dtinthstagram" />
+<meta name="fb:admins" content="1658509977" />
+<meta name="og:description" content="a simple Instagram viewer for web" />
+<meta name="description" content="a simple Instagram viewer for web" />
 <script src="emoji/emoji.js"></script>
 <script src="emoji/emoji.data.js"></script>
 <body>
