--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <div id="main-wrapper">
 	<div id="main">
-		<h1 id="head">dtinthstagram</h1>
+		<div id="head">
+			<h1>dtinthstagram</h1>
+		</div>
 	</div>
 </div>
 <div class="template" id="auth-needed">
