user info : first iteration

--- a/index.html
+++ b/index.html
@@ -111,7 +111,21 @@
 <div class="template collection" id="collection">
 </div>
 <div class="template user-info" id="user-info">
-	<div data-role="picture"></div>
+	<div class="user-picture" data-role="picture"></div>
+	<div class="infobox">
+		<div class="infobox-box infobox-following"><span>follows<span><strong>123</strong></div>
+		<div class="infobox-box infobox-followers"><strong>123</strong><span>follows</span></div>
+		<div class="infobox-box infobox-photos"><strong>123</strong><span>photos</span></div>
+	</div>
+	<div class="biobox">
+		<div class="biobox-contents">
+			<div class="user-name"><span class="real-name">Real Name</span> <span class="username">username</span></div>
+			<div class="bio-data">
+				the bio data of the user will display here<br />
+				hello world.
+			</div>
+		</div>
+	</div>
 </div>
 <script src="lib/raphael.js"></script>
 <script src="lib/jquery-1.7.2.js"></script>
