--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ if (location.href.match(/:8000/i)) {
 	loadScript(DEBUG_MODE ? 'lib/underscore.js' : 'http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.1/underscore-min.js');
 	loadScript(DEBUG_MODE ? 'lib/jquery-1.7.2.js' : 'http://code.jquery.com/jquery-1.7.2.min.js');
 	loadScript(DEBUG_MODE ? 'apollo/oni-apollo.js' : 'http://code.onilabs.com/apollo/0.13/oni-apollo.js');
+	loadScript(DEBUG_MODE ? 'lib/jquery.history.js' : 'http://balupton.github.com/history.js/scripts/bundled/html4+html5/jquery.history.js');
 
 })();
 
