highlight on hovering links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
 <div class="template comment" id="comment">
 	<span class="user" data-role="user">username</span>
-	<span data-role="text">text</span>
+	<span data-role="text" class="comment-text">text</span>
 	<span class="when" data-role="date">when</span>
 </div>
 <div class="template collection" id="collection">
