--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="template picture" id="picture">
-	<div class="left">
+	<div class="left" data-role="leftSide">
 		<span class="user" data-role="user">username</span
 		><span class="profile-picture" data-role="picture"></span
 		><div class="when" data-role="date">when</div>
