--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ if (location.href.match(/:8000/i)) {
 	loadScript(DEBUG_MODE ? 'lib/raphael.js' : 'http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js');
 	loadScript(DEBUG_MODE ? 'lib/underscore.js' : 'http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.1/underscore-min.js');
 	loadScript(DEBUG_MODE ? 'lib/jquery-1.7.2.js' : 'http://code.jquery.com/jquery-1.7.2.min.js');
-	// loadScript(DEBUG_MODE ? 'apollo/oni-apollo.js' : 'http://code.onilabs.com/apollo/0.13/oni-apollo.js');
-	loadScript('http://code.onilabs.com/apollo/unstable/oni-apollo.js');
+	loadScript(DEBUG_MODE ? 'apollo/oni-apollo.js' : 'http://code.onilabs.com/apollo/unstable/oni-apollo.js');
+	loadScript(DEBUG_MODE ? 'lib/backbone.js' : 'http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js');
 	loadScript('lib/jquery.history.js');
 
 })();
